Using the same logic applied for getReviewsByFilmId to getRepliesByReviewId