@@ -63,12 +63,30 @@ public class ReviewService {
     }
 
     @Cacheable(value = "reviewReplies", key = "#reviewId")
-    public List<ReviewsDTO> getRepliesByReviewId(Long reviewId) {
+    public List<ReviewsDTO> getRepliesByReviewId(Long reviewId, User user) {
         log.info("Fetching replies for reviewId={}", reviewId);
         Pageable pageable = PageRequest.of(0, 20, Sort.by("createdAt").descending());
         Page<Review> reviews = reviewRepository.findByAnswerTo_Id(reviewId, pageable);
         log.debug("Fetched {} replies for reviewId={}", reviews.getNumberOfElements(), reviewId);
-        return reviews.stream().map(ReviewsDTO::fromReview).toList();
+        List<Long> reviewIds = reviews.stream().map(Review::getId).toList();
+
+        Map<Integer, List<Long>> reviewIdsByVoteValue = voteService.voteByUserIdAndReviewIds(user, reviewIds).stream()
+                .collect(Collectors.groupingBy(
+                        Vote::getValue,
+                        Collectors.mapping(v -> v.getReview().getId(), Collectors.toList())
+                ));
+        List<Long> userLikedReviewList = reviewIdsByVoteValue.getOrDefault(1, List.of());
+        List<Long> userDislikedReviewList = reviewIdsByVoteValue.getOrDefault(-1, List.of());
+
+        return reviews.stream()
+                .map(review -> {
+                    boolean userLiked = userLikedReviewList.contains(review.getId());
+                    boolean userDisliked = userDislikedReviewList.contains(review.getId());
+                    if(!userLiked && !userDisliked) return ReviewsDTO.fromReview(review, false, false);
+                    return userLiked
+                            ? ReviewsDTO.fromReview(review, true, false)
+                            : ReviewsDTO.fromReview(review, false, true);
+                }).toList();
     }
 
     @Cacheable(value = "userReviews", key = "{ (#user != null ? #user.id : 0), #page }")
